# rust-web-app

./: .gitignore  README.md  docker-compose.yml
go-web-app/: go.mod  go.sum  main.go
go-web-app/db/: db.go
go-web-app/handlers/: indexHandler.go  userHandler.go
go-web-app/models/: user.go
go-web-app/server/: router.go  server.go
go-web-app/services/: userService.go
rust-web-app/: Cargo.toml
rust-web-app/src/: main.rs
rust-web-app/src/db/: dynamo.rs
rust-web-app/src/handlers/: user_handler.rs
rust-web-app/src/models/: user.rs
rust-web-app/src/routes/: index.rs  mod.rs  user.rs
rust-web-app/src/services/: user_service.rs
src/models/: user.rs
src/routes/: index.rs
ts-web-app/: package-lock.json  package.json  tsconfig.json
ts-web-app/src/: app.ts  db.ts  index.ts  server.ts
ts-web-app/src/controllers/: userController.ts
ts-web-app/src/routes/: index.ts  user.ts
ts-web-app/src/services/: userService.ts
