[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-dynamodb = "0.0.26-alpha"
aws-config = "0.3.0"  # 追加: aws-configクレートを利用するために追加